fixed dependecy error & card alignment

--- a/src/index.css
+++ b/src/index.css
@@ -65,8 +65,7 @@ body {
   background-color: #eeeeee;
   border-radius: 5px;
   border: solid 1px #dddd;
-  padding: 5px 25px;
-  margin: 20px 10px 0 15px;
+  margin: 20px 0 0 4%;
   width: 45%;
 }
 
